<resources>
    <string name="app_name">BMI Calculator</string>

    <string name="details_view_title">Details</string>
    <string name="history_view_title">History</string>
    <string name="about_me_view_title">About the author</string>

    <string name="weight_input_label">Weight</string>
    <string name="height_input_label">Height</string>

    <string name="weight_metric_unit">kg</string>
    <string name="height_metric_unit">cm</string>
    <string name="weight_imperial_unit">lbs</string>
    <string name="height_imperial_unit">in</string>

    <string name="calculate_bmi_button_text">Calculate BMI</string>

    <string name="switch_units_metric_menuitem">Switch to metric units</string>
    <string name="switch_units_imperial_menuitem">Switch to imperial units</string>
    <string name="view_history_menuitem">History</string>
    <string name="about_me_menuitem">About the author</string>

    <string name="invalid_weight">Invalid weight</string>
    <string name="invalid_height">Invalid height</string>

    <string name="bmi_category_normal">Normal</string>
    <string name="bmi_category_overweight">Overweight</string>
    <string name="bmi_category_obese">Obese</string>
    <string name="bmi_category_underweight">Underweight</string>

    <string name="bmi_tips_header">Tips</string>

    <string name="bmi_underweight_details">Being underweight can indicate a lack of essential nutrients and may lead to weakened immunity and muscle loss.</string>
    <string-array name="bmi_underweight_tips">
        <item>Consult a healthcare professional for guidance on a balanced diet tailored to your needs.</item>
        <item>Incorporate strength training exercises to build muscle mass.</item>
        <item>Aim for regular meals and snacks to increase calorie intake in a healthy way.</item>
    </string-array>

    <string name="bmi_normal_details">Congratulations! You\'re in a healthy weight range, which lowers the risk of various health issues.</string>
    <string-array name="bmi_normal_tips">
        <item>Maintain your balanced diet and exercise routine to stay in this category.</item>
        <item>Continue monitoring your health with regular check-ups.</item>
        <item>Focus on maintaining a healthy lifestyle that includes physical activity and a nutritious diet.</item>
    </string-array>

    <string name="bmi_overweight_details">Being overweight increases the risk of health problems such as heart disease, diabetes, and high blood pressure.</string>
    <string-array name="bmi_overweight_tips">
        <item>Gradually incorporate healthier eating habits and portion control.</item>
        <item>Engage in regular physical activity to aid weight loss and improve overall health.</item>
        <item>Seek support from a registered dietitian or healthcare professional for personalized advice.</item>
    </string-array>

    <string name="bmi_obese_details">Obesity is associated with severe health risks, including increased chances of heart disease, stroke, and certain cancers.</string>
    <string-array name="bmi_obese_tips">
        <item>Consult a healthcare provider for a comprehensive weight management plan.</item>
        <item>Focus on reducing calorie intake and increasing physical activity.</item>
        <item>Consider support groups or counseling to address emotional aspects of weight management.</item>
    </string-array>

    <string name="about_intro">Hi! I\'m Monczak.</string>
    <string name="about_paragraph1">I\'m a passionate software and game developer, currently studying Applied Computer Science at Wroclaw University of Technology.\nI\'m a member of TK Games - a student organization dedicated to game development.</string>

    <string name="about_paragraph2">My favorite programming language is C\#, with which I have around 6–7 years of experience. I make games using Unity and Godot, which I\'ve started learning recently, as well as my own custom engine \(named Mari\) used for a game I\'m currently working on.\nI also produce my own music using Ableton Live, and more recently, FamiTracker.</string>

    <string name="about_paragraph3">Some of my proudest projects:\n- Crispy\: CHIP-8 emulator made with MonoGame\n- The Mangler\: Web app for procedural generation of text using Markov chains\n- Flexible 6502 assembler and emulator written from scratch in C\#</string>

    <string name="github_button">Check out my GitHub</string>

    <string name="unknown">\?</string>
</resources>